Fixed white space in desktop Estimate section

--- a/src/components/SectionEstimate/SectionEstimate.module.scss
+++ b/src/components/SectionEstimate/SectionEstimate.module.scss
@@ -9,7 +9,7 @@
 
   @include media-query('lg') {
     flex-direction: row;
-    gap: 7.5rem;
+    justify-content: space-between;
     @include padding-y(20rem);
   }
 
